--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,8 +9,8 @@ kirstie_whitaker:
 
 isla_staden:
   name: Isla Staden
-  email: istaden@turing.ac.uk
-  bio: "Placement Research Assistant at the Alan Turing Institute. Interested in data-science, brain networks and topology" # Add a few words about yourself within the quotation marks.
+  email: istaden@gmail.com
+  bio: "Research Assistant at the Alan Turing Institute. Interested in data-science, brain networks and topology" # Add a few words about yourself within the quotation marks.
   avatar: IS_whitakerblogprofile.jpg # Please add a picture to the images folder (ok to be an avatar rather than a picture of you if you'd prefer)
   twitter: # Ok to leave blank
 
